# webby

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml  pull_request.yml
charts/webby/: Chart.yaml  values.yaml
charts/webby/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/webby/templates/tests/: test-connection.yaml
config/: default.toml
src/: lib.rs  main.rs  models.rs  settings.rs
src/routes/: index.rs  mod.rs  version.rs
src/routes/api/v1/: version.rs
templates/: base.html.tera  index.html.tera
