[package]
name = "webby"
version = "0.1.0"
authors = ["Hirad Pourtahmasbi <git@hirad.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
lazy_static = "1.4.0"
rand = "0.8.3"
rocket = "0.4.7"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["tera_templates", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
